welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
	if (a<b<c && !equalOk || a<=b<=c && equalOk) {
		return true
	}
	else {
		return false
	}
}
